--- a/welcom.html
+++ b/welcom.html
@@ -2,7 +2,16 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<title>Batiments, Paris-Saclay</title>
-		<meta name="author" content="samuel.monsinjon">
-		<link rel= "stylesheet" href="batiments.css">
+		<title>Web Game</title>
+		<meta name="author" content="monsinjon_soullard">
+		<link rel= "stylesheet" href="game.css">
 	</head>
+
+	<body id="background">
+		<table id="menu">
+			<td>Inscription</td><tr>
+			<td>Player1</td><tr>
+			<td>Player2</td><tr>
+		</table>
+	</body>
+<html>
