--- a/welcom.html
+++ b/welcom.html
@@ -10,7 +10,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="welcom_script.js"></script>
 	
-	<body id="background">
+	<body id="background" onload="refresh()">
 		<table id="menu">
 			<td>INSCRIPTION</td><tr>
 			<td>Nickname: <input id="nickname" type="text"><select id="level">	<option>Débutant</option>
@@ -24,9 +24,7 @@
 				</table></td><tr>
 				
 			<td><table id="listplayers">
-				<td>Player1</td><td>Débutant</td><tr>
-				<td>Player2</td><td>Amateur</td><tr>
-				<td>Player3</td><td>Expert</td><tr>
+
 			</table></td>
 			
 		</table>
