Fixe join/leave

--- a/welcom.html
+++ b/welcom.html
@@ -16,11 +16,9 @@
 			<td>Nickname: <input id="nickname" type="text"><select id="level">	<option>Débutant</option>
 																				<option>Amateur</option>
 																				<option>Expert</option></select></td><tr>
-															
-			<td><input type="Button" value="Add" onclick="add()"></td><tr>
 			
-			<td><table>	<td><input type="Button" value="Start" onclick="start()"></td>
-						<td><input type="Button" value="Refresh" onclick="refresh()"></td><tr>
+			<td><table>	<td id="join_b"><input type="Button" value="Join" onclick="join()"></td>
+						<td id="start_b"><input type="Button" value="Start" onclick="start()"></td><tr>
 				</table></td><tr>
 				
 			<td><table id="listplayers">
