Fixe refresh call

--- a/welcom.html
+++ b/welcom.html
@@ -11,7 +11,7 @@
 	<script src="welcom_script.js"></script>
 	<script src="tapis_script.js"></script>
 
-	<body id="background" onload="refresh()">
+	<body id="background" onload="refreshplayer()">
 		<table id="menu">
 			<td>INSCRIPTION</td><tr>
 			<td>Nickname: <input id="nickname" type="text"><select id="level">	<option>Débutant</option>
