--- a/welcom.html
+++ b/welcom.html
@@ -11,15 +11,15 @@
 	<script src="welcom_script.js"></script>
 	<script src="tapis_script.js"></script>
 
-	<body id="background" onload="refreshplayer()">
+	<body id="background" onload="refreshPlayer()">
 		<table id="menu">
 			<td>INSCRIPTION</td><tr>
 			<td>Nickname: <input id="nickname" type="text"><select id="level">	<option>Débutant</option>
 																				<option>Amateur</option>
 																				<option>Expert</option></select></td><tr>
 			
-			<td><table>	<td id="join_b"><input type="Button" value="Join" onclick="join()"></td>
-						<td id="start_b"><input type="Button" value="Start" onclick="start()"></td><tr>
+			<td><table>	<td><input id="join_b" type="Button" value="Join" onclick="join()"></td>
+						<td><input id="start_b" type="Button" value="Start" onclick="start()" disabled="true"></td><tr>
 				</table></td><tr>
 				
 			<td><table id="listplayers">
