Fixe start for everyplayer

--- a/Creation_partie.html
+++ b/Creation_partie.html
@@ -9,7 +9,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src = Creation_partie_script.js></script>
-	<body id="background" onload="refreshPlayer()">
+	<body id="background">
 		<table id="menu">
 			<td>INSCRIPTION</td><tr>
 		
