--- a/welcom.html
+++ b/welcom.html
@@ -19,7 +19,7 @@
 																				<option>Expert</option></select></td><tr>
 			
 			<td><table>	<td><input id="join_b" type="Button" value="Join" onclick="join()"></td>
-						<td><input id="start_b" type="Button" value="Start" onclick="start()" disabled="true"></td><tr>
+						<td><input id="start_b" type="Button" value="Start" onclick="start_()" disabled="true"></td><tr>
 				</table></td><tr>
 				
 			<td><table id="listplayers">
